# ai-learning

./: pyproject.toml
week1/: matplot-notes.ipynb  matplot-practice.ipynb  numpy-basics.ipynb  numpy-practice.ipynb  pandas-practice.ipynb  seaborn-notes.ipynb  seaborn-practice.ipynb
week2-DataAnalysis/: Books Data  EDA.ipynb  cleaned_clinical_trials.xlsx  clinical_trials.xlsx  data-cleaning.ipynb  data-gathering.ipynb  patients.csv  treatments.csv
